--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <h2>Nuestro Blog</h2>
             <article class="main-article">
                 <div class="imagen">
-                    <img src="/img/blog2.jpg" loading="lazy" alt="Blog1">
+                    <img src="img/blog2.jpg" loading="lazy" alt="Blog1">
                 </div>
                 <div class="article-description">
                     <h3>Tipos de Grando de Café</h3>
@@ -55,7 +55,7 @@
             </article>
             <article class="main-article">
                 <div class="imagen">
-                    <img src="/img/blog2.jpg" alt="Blog2">
+                    <img src="img/blog2.jpg" alt="Blog2">
                 </div>
                 <div class="article-description">
                     <h3>3 Deliciosas recetas para café</h3>
@@ -67,7 +67,7 @@
             </article>
             <article class="main-article">
                 <div class="imagen">
-                    <img src="tree/main/img/blog3.jpg" alt="Blog3">
+                    <img src="img/blog3.jpg" alt="Blog3">
                 </div>
                 <div class="article-description">
                     <h3>Beneficios del café</h3>
